form visibility ui fixes

--- a/common/web/css/frontend/campaign/campaign-edit.less
+++ b/common/web/css/frontend/campaign/campaign-edit.less
@@ -71,6 +71,7 @@
 		margin-top: @gutter;
 	}
 	.col-sm-4,
+	.col-md-4,
 	.col-md-6 {
 		padding: 0;
 	}
